--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint",
         "update": "npm install @deepberry/common@latest",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
     },
     "dependencies": {
         "@deepberry/common": "^0.1.0",
@@ -19,9 +21,18 @@
         "@babel/core": "^7.12.16",
         "@babel/eslint-parser": "^7.12.16",
         "@babel/plugin-proposal-optional-chaining": "^7.17.12",
+        "@storybook/addon-actions": "^6.5.9",
+        "@storybook/addon-essentials": "^6.5.9",
+        "@storybook/addon-interactions": "^6.5.9",
+        "@storybook/addon-links": "^6.5.9",
+        "@storybook/builder-webpack5": "^6.5.9",
+        "@storybook/manager-webpack5": "^6.5.9",
+        "@storybook/testing-library": "^0.0.13",
+        "@storybook/vue3": "^6.5.9",
         "@vue/cli-plugin-babel": "~5.0.0",
         "@vue/cli-plugin-eslint": "~5.0.0",
         "@vue/cli-service": "~5.0.0",
+        "babel-loader": "^8.2.5",
         "csslab": "^4.0.3",
         "eslint": "^7.32.0",
         "eslint-plugin-vue": "^8.0.3",
@@ -31,6 +42,7 @@
         "lint-staged": "^13.0.2",
         "prettier": "2.7.1",
         "style-resources-loader": "^1.5.0",
+        "vue-loader": "^16.8.3",
         "vue-svg-inline-loader": "^2.1.3"
     },
     "browserslist": [
