--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@storybook/addon-essentials": "^6.5.9",
         "@storybook/addon-interactions": "^6.5.9",
         "@storybook/addon-links": "^6.5.9",
+        "@storybook/addon-storysource": "^6.5.9",
         "@storybook/builder-webpack5": "^6.5.9",
         "@storybook/manager-webpack5": "^6.5.9",
         "@storybook/testing-library": "^0.0.13",
