--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "lint": "vue-cli-service lint",
         "update": "npm install @deepberry/common@latest",
         "prepare": "husky install",
-        "storybook": "start-storybook -p 6006",
+        "storybook": "start-storybook -p 6006 --no-open",
         "build-storybook": "build-storybook"
     },
     "dependencies": {
@@ -25,11 +25,11 @@
         "@storybook/addon-essentials": "^6.5.9",
         "@storybook/addon-interactions": "^6.5.9",
         "@storybook/addon-links": "^6.5.9",
-        "@storybook/addon-storysource": "^6.5.9",
         "@storybook/builder-webpack5": "^6.5.9",
         "@storybook/manager-webpack5": "^6.5.9",
         "@storybook/testing-library": "^0.0.13",
         "@storybook/vue3": "^6.5.9",
+        "storybook-source-code-addon": "^1.2.0",
         "@vue/cli-plugin-babel": "~5.0.0",
         "@vue/cli-plugin-eslint": "~5.0.0",
         "@vue/cli-service": "~5.0.0",
