feat:upload image cms install

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,8 @@
         "module": "esnext",
         "baseUrl": "./",
         "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true,
         "paths": {
             "@/*": ["src/*"]
         },
