--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "@deepberry/vue3-element-extend",
     "version": "0.1.2",
     "scripts": {
+        "dev": "env DEV_SERVER=true vue-cli-service serve",
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint",
@@ -11,7 +12,7 @@
         "build-storybook": "build-storybook"
     },
     "dependencies": {
-        "@deepberry/common": "^0.1.5",
+        "@deepberry/common": "^0.1.6",
         "core-js": "^3.8.3",
         "element-plus": "^2.2.5",
         "vue": "^3.2.13",
