--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "lint": "vue-cli-service lint",
         "update": "npm install @deepberry/common@latest",
         "prepare": "husky install",
-        "storybook": "start-storybook -p 6006 --no-open",
+        "storybook": "start-storybook -p 6008 --no-open",
         "build-storybook": "build-storybook"
     },
     "dependencies": {
@@ -21,8 +21,9 @@
     "devDependencies": {
         "@babel/core": "^7.12.16",
         "@babel/eslint-parser": "^7.12.16",
-        "@babel/plugin-proposal-optional-chaining": "^7.17.12",
+        "@mdx-js/react": "^1.6.22",
         "@storybook/addon-actions": "^6.5.9",
+        "@storybook/addon-docs": "^6.5.10",
         "@storybook/addon-essentials": "^6.5.9",
         "@storybook/addon-interactions": "^6.5.9",
         "@storybook/addon-links": "^6.5.9",
