--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "build-storybook": "build-storybook"
     },
     "dependencies": {
-        "@deepberry/common": "^0.1.6",
+        "@deepberry/common": "^0.2.2",
+        "ali-oss": "^6.17.1",
         "core-js": "^3.8.3",
         "element-plus": "^2.2.5",
         "vue": "^3.2.13",
